fix to fix to README